<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="main_button_search">Поиск</string>
    <string name="main_button_media">Медиатека</string>
    <string name="main_button_settings">Настройки</string>
    <string name="settings_dark_theme">Темная тема</string>
    <string name="settings_share">"Поделиться приложением"</string>
    <string name="settings_group">"Написать в поддержку"</string>
    <string name="settings_condition">"Пользовательское соглашение"</string>
</resources>