<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/padding_End"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/light_mode_arrow"
            android:scaleType="centerCrop"
            android:id="@+id/back_to_main_button"
            app:iconTint="@color/back_blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/side_padding"
            android:text="@string/main_button_settings"
            android:textAllCaps="false"
            android:textColor="@color/black_text_button"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_marginTopSettings"
        android:paddingStart="@dimen/side_padding"
        android:paddingEnd="@dimen/padding_End">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_dark_theme"
            android:textSize="@dimen/side_padding"
            android:layout_marginBottom="@dimen/layout_marginBottom"
            android:textColor="@color/black_text_button"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/settings_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/icon_padding"
            android:checked="false"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/side_padding"
        android:paddingEnd="@dimen/padding_End">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/side_padding"
            android:layout_marginTop="@dimen/layout_marginBottom"
            android:layout_marginBottom="@dimen/layout_marginBottom"
            android:backgroundTint="@color/white"
            android:text="@string/settings_share"
            android:textColor="@color/black_text_button"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_marginBottom"
            android:layout_gravity="end"
            android:scaleType="centerCrop"
            android:src="@drawable/share"
            app:iconPadding="@dimen/icon_padding"
            android:id="@+id/share_button"
            app:iconTint="@color/back_blue" />


    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/side_padding"
        android:paddingEnd="@dimen/padding_End">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/side_padding"
            android:layout_marginTop="@dimen/layout_marginBottom"
            android:layout_marginBottom="@dimen/layout_marginBottom"
            android:backgroundTint="@color/white"
            android:text="@string/settings_group"
            android:textColor="@color/black_text_button"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_marginBottom"
            android:layout_gravity="end"
            android:scaleType="centerCrop"
            android:src="@drawable/group"
            app:iconPadding="@dimen/icon_padding"
            android:id="@+id/group_button"
            app:iconTint="@color/back_blue" />


    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/side_padding"
        android:paddingEnd="@dimen/padding_End">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/layout_marginBottom"
            android:layout_marginBottom="@dimen/layout_marginBottom"
            android:backgroundTint="@color/white"
            android:text="@string/settings_condition"
            android:textColor="@color/black_text_button"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_marginBottom"
            android:layout_gravity="end"
            android:scaleType="centerCrop"
            android:src="@drawable/back_arrow"
            app:iconPadding="@dimen/icon_padding"
            android:id="@+id/conditions_button"
            app:iconTint="@color/back_blue" />


    </FrameLayout>

</LinearLayout>